// ─────────────────────────────────────────────────────────────────────────────
// Orbis Scheduler — Database Schema (DBML)
// Hussain Jameel · ITA602 · Torrens University Australia
// ─────────────────────────────────────────────────────────────────────────────

// ── ENUMS ─────────────────────────────────────────────────────────────────────

enum user_role {
  owner
  admin
}

enum approval_status {
  pending
  approved
  rejected
}

enum field_type {
  text
  textarea
  dropdown
  checkbox
  radio
  // future: file (post-MVP with booking_attachments table)
}

enum booking_status {
  pending
  approved
  rejected
  cancelled
}

// ── TABLES ────────────────────────────────────────────────────────────────────

Table users {
  id            serial        [pk, increment, note: "Primary key"]
  name          varchar(100)  [not null]
  email         varchar(255)  [unique, not null]
  password_hash varchar(255)  [not null, note: "bcrypt hashed"]
  role          user_role     [not null, default: "owner"]
  is_active     boolean       [not null, default: true, note: "Admin can deactivate login"]
  created_at    timestamp     [not null, default: `now()`]
}

Table businesses {
  id                uuid          [pk, default: `gen_random_uuid()`, note: "Used in public booking URL"]
  user_id           integer       [not null, ref: > users.id]
  name              varchar(255)  [not null]
  slug              varchar(255)  [unique, not null, note: "URL-friendly e.g. joes-plumbing"]
  description       text          [null]
  phone             varchar(20)   [null]
  contact_email     varchar(255)  [null, note: "Separate from login email"]
  website_url       varchar(255)  [null]
  is_active         boolean       [not null, default: true, note: "Admin suspend/activate"]
  approval_status   approval_status [not null, default: "pending"]
  rejection_reason  text          [null, note: "Admin fills on rejection"]
  created_at        timestamp     [not null, default: `now()`]

  indexes {
    user_id         [name: "idx_businesses_user_id"]
    approval_status [name: "idx_businesses_approval_status"]
  }
}

Table availability_rules {
  id                    serial    [pk, increment]
  business_id           uuid      [not null, ref: > businesses.id]
  day_of_week           smallint  [not null, note: "0 = Monday, 6 = Sunday"]
  start_time            time      [not null]
  end_time              time      [not null]
  break_start           time      [null]
  break_end             time      [null]
  slot_duration_minutes smallint  [not null, note: "e.g. 30 or 60"]
  is_available          boolean   [not null, default: true]
  updated_at            timestamp [not null, default: `now()`]

  indexes {
    business_id [name: "idx_availability_rules_business_id"]
  }
}

Table booking_forms {
  id                   serial        [pk, increment]
  business_id          uuid          [not null, ref: > businesses.id]
  title                varchar(255)  [not null, note: "e.g. Book a Consultation"]
  description          text          [null]
  booking_window_days  smallint      [not null, default: 30, note: "How far ahead customers can book"]
  is_active            boolean       [not null, default: true, note: "Only one active form per business"]
  created_at           timestamp     [not null, default: `now()`]
  updated_at           timestamp     [not null, default: `now()`]

  indexes {
    business_id [name: "idx_booking_forms_business_id"]
  }
}

Table form_fields {
  id            serial        [pk, increment]
  form_id       integer       [not null, ref: > booking_forms.id]
  label         varchar(255)  [not null, note: "e.g. Choose your suburb"]
  field_type    field_type    [not null]
  options       jsonb         [null, note: "Array of options for dropdown/radio/checkbox"]
  is_required   boolean       [not null, default: false]
  display_order smallint      [not null, note: "Controls render order on the form"]
  created_at    timestamp     [not null, default: `now()`]

  indexes {
    form_id [name: "idx_form_fields_form_id"]
  }
}

Table bookings {
  id             serial        [pk, increment]
  business_id    uuid          [not null, ref: > businesses.id, note: "Denormalised for direct tenant queries"]
  form_id        integer       [not null, ref: > booking_forms.id]
  customer_name  varchar(255)  [not null]
  customer_email varchar(255)  [not null]
  customer_phone varchar(20)   [null]
  booking_date   date          [not null]
  booking_time   time          [not null]
  status         booking_status [not null, default: "pending"]
  owner_notes    text          [null, note: "Owner adds notes on approval/rejection"]
  created_at     timestamp     [not null, default: `now()`]
  updated_at     timestamp     [not null, default: `now()`]

  indexes {
    business_id             [name: "idx_bookings_business_id"]
    status                  [name: "idx_bookings_status"]
    (business_id, status)   [name: "idx_bookings_business_status", note: "Composite — for filtered dashboard queries"]
  }
}

Table booking_field_values {
  id            serial   [pk, increment]
  booking_id    integer  [not null, ref: > bookings.id]
  form_field_id integer  [not null, ref: > form_fields.id]
  value         text     [null, note: "Customer answer stored as text regardless of field type"]

  indexes {
    booking_id    [name: "idx_booking_field_values_booking_id"]
    form_field_id [name: "idx_booking_field_values_form_field_id"]
  }
}
